Fix foreign currency income/expense transactions in reports.

The previous commit broke the convert all values to the base currency
use case. Fixed this by properly checking that flag before converting
a split's value to the currency of the starting account.

Extended the multiple currencies report test case to check this
scenario.

BUG: 345550